# micp-stack

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.zh-CN.md
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  COMPARISON.md  COMPARISON.zh-CN.md  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.zh-CN.md  MICP2_DESIGN.md  MICP2_DESIGN.zh-CN.md  PORTING_STM32F103.md  PORTING_STM32F103.zh-CN.md  PROTOCOL_SPEC.md  PROTOCOL_SPEC.zh-CN.md
examples/: loopback_demo.c  micp2_matrix_demo.c
include/micp/: micp.h  micp_crc.h  micp_frame.h  micp_session.h  micp_types.h
include/micp2/: micp2.h  micp2_matrix.h  micp2_signal.h  micp2_types.h
src/: micp2_matrix.c  micp2_signal.c  micp_crc.c  micp_frame.c  micp_session.c  micp_types.c
src2/: micp2_matrix.c  micp2_signal.c
tests/: micp_test.h  test_crc.c  test_frame.c  test_micp2_signal.c  test_session.c
